# pixel-sim

./: .gitignore  README.md  cyclic_colormaps.md  diverging_colormaps.md  pyproject.toml  shapes.md
assets/: Alihossein.json  Flare.json  Iris.json  Peach.json  Relay.json  Timber.json  Venice.json  coolwarm.json  hsv.json
assets/cyclic/: Purpink.json  RainbowBlue.json  SublimeVivid.json  twilight.json  twilight_shifted.json
assets/diverging/: Argon.json  BackToEarth.json  JShine.json
scripts/: create_colormap.py  create_shape_map.py  encode_cyclic_colormap.py  encode_mono_colormap.py  plot_easing.py
src/pixel_sim/: __init__.py  analysis.py  color.py  colormaps.py  plotting.py  shapes.py
